--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,11 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <title>[Title of your project]</title>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" type="text/css" href="main.css" />
-</head>
-<body>
-  <h1>Welcome to [Title of your project]</h1>
-</body>
+  <head>
+    <title>Parsnip Puncher (number of parsnips)</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
+    <!-- add bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script src="./index.js"></script>
+  </head>
+
+  <body>
+    <div class="container-fluid text-center">
+      <nav class="row flex-d align-items-center">
+        <span class="col"></span>
+        <h1 class="col" id="test">Welcome to Parsnip Puncher [TM]</h1>
+        <a class="col text-end" href="./about.html">About</a>
+      </nav>
+      <div>
+        <p id="lblParsnips">0 Parsnips</p>
+        <img
+          draggable="false"
+          class="boxing-cursor parsnip-animation"
+          src="./assets/images/parsnip.png"
+          onclick="parsnipit()"
+        />
+      </div>
+    </div>
+  </body>
 </html>
